--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ a:hover{
 .content-wrap {
   max-width: 950px;
   margin: 0 auto;
-  padding: 60px 50px;;
+  padding: 60px 50px;
   overflow: auto;
 }
 
